; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-encoder.c_find_encoder.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-encoder.c_find_encoder.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i64, %struct.obs_encoder_info* }
%struct.obs_encoder_info = type { i32 }

@obs = common dso_local global %struct.TYPE_4__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.obs_encoder_info* @find_encoder(i8* %0) #0 {
  %2 = alloca %struct.obs_encoder_info*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.obs_encoder_info*, align 8
  store i8* %0, i8** %3, align 8
  store i64 0, i64* %4, align 8
  br label %6

6:                                                ; preds = %29, %1
  %7 = load i64, i64* %4, align 8
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** @obs, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = icmp ult i64 %7, %11
  br i1 %12, label %13, label %32

13:                                               ; preds = %6
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** @obs, align 8
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 1
  %17 = load %struct.obs_encoder_info*, %struct.obs_encoder_info** %16, align 8
  %18 = load i64, i64* %4, align 8
  %19 = getelementptr inbounds %struct.obs_encoder_info, %struct.obs_encoder_info* %17, i64 %18
  store %struct.obs_encoder_info* %19, %struct.obs_encoder_info** %5, align 8
  %20 = load %struct.obs_encoder_info*, %struct.obs_encoder_info** %5, align 8
  %21 = getelementptr inbounds %struct.obs_encoder_info, %struct.obs_encoder_info* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = load i8*, i8** %3, align 8
  %24 = call i64 @strcmp(i32 %22, i8* %23)
  %25 = icmp eq i64 %24, 0
  br i1 %25, label %26, label %28

26:                                               ; preds = %13
  %27 = load %struct.obs_encoder_info*, %struct.obs_encoder_info** %5, align 8
  store %struct.obs_encoder_info* %27, %struct.obs_encoder_info** %2, align 8
  br label %33

28:                                               ; preds = %13
  br label %29

29:                                               ; preds = %28
  %30 = load i64, i64* %4, align 8
  %31 = add i64 %30, 1
  store i64 %31, i64* %4, align 8
  br label %6

32:                                               ; preds = %6
  store %struct.obs_encoder_info* null, %struct.obs_encoder_info** %2, align 8
  br label %33

33:                                               ; preds = %32, %26
  %34 = load %struct.obs_encoder_info*, %struct.obs_encoder_info** %2, align 8
  ret %struct.obs_encoder_info* %34
}

declare dso_local i64 @strcmp(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
